fixed titles not cetering on small screens

--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -291,6 +291,7 @@ p {
 
     .title {
         justify-content: center;
+        text-align: center;
     }
     
     .contact ul {
